feat: init openapi

--- a/services/lol-metrics-back/package.json
+++ b/services/lol-metrics-back/package.json
@@ -5,12 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "generate:api": "openapi-typescript openapi.yaml --output src/types/openapi.ts",
     "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
@@ -22,6 +25,7 @@
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.5.3",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.3",
