--- a/services/lol-metrics-back/package.json
+++ b/services/lol-metrics-back/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@prisma/client": "^6.10.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "prisma": "^6.10.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0",
     "zod": "^3.25.64"
