--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn workspace lol-metrics-back lint
 
       - name: 🧹 Run linter (front)
-        run: yarn workspace lol-metrics-front lint
+        run: yarn workspace lol-metrics-view lint
 
       - name: 🏗️ Build backend
         run: yarn workspace lol-metrics-back build
