--- a/services/lol-metrics-back/tsconfig.json
+++ b/services/lol-metrics-back/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
