--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  COMMUNITY_DRAGON_API_URL: https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default
+
 jobs:
   install-deps:
     name: Install Dependencies
