--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,21 @@ env:
 
 jobs:
   install-deps:
-    name: Install Dependencies
+    name: 🛎️ Install Dependencies ${{ github.event_name == 'push' && '[Merge]' || '[PR]' }}
     runs-on: ubuntu-latest
     outputs:
       cache-hit: ${{ steps.cache-deps.outputs.cache-hit }}
     steps:
-      - name: 🛎️ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: 🔧 Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: "24"
           cache: "yarn"
 
-      - name: 📦 Cache Yarn
+      - name: Cache Yarn
         id: cache-deps
         uses: actions/cache@v3
         with:
@@ -34,24 +34,24 @@ jobs:
             **/.yarn/cache
           key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: yarn install --frozen-lockfile
 
   lint-build:
-    name: Lint & Build
+    name: 🧹 Lint & Build ${{ github.event_name == 'push' && '[Merge]' || '[PR]' }}
     runs-on: ubuntu-latest
     needs: install-deps
     steps:
-      - name: 🛎️ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: 🔧 Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: "24"
           cache: "yarn"
 
-      - name: 📦 Restore Yarn cache
+      - name: Restore Yarn cache
         uses: actions/cache@v3
         with:
           path: |
@@ -59,17 +59,17 @@ jobs:
             **/.yarn/cache
           key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
-      - name: 🧹 Run linter (back)
+      - name: Run linter (backend)
         run: yarn workspace lol-metrics-back lint
 
-      - name: 🧹 Run linter (front)
+      - name: Run linter (frontend)
         run: yarn workspace lol-metrics-view lint
 
-      - name: 🏗️ Build backend
+      - name: Build backend
         run: yarn workspace lol-metrics-back build
 
   audit:
-    name: Security Audit (Yarn)
+    name: 🔍 Security Audit ${{ github.event_name == 'push' && '[Merge]' || '[PR]' }}
     runs-on: ubuntu-latest
     needs: install-deps
     steps:
@@ -78,27 +78,27 @@ jobs:
         with:
           node-version: "24"
 
-      - name: 🔍 Audit backend dependencies
+      - name: Audit backend dependencies
         run: yarn workspace lol-metrics-back audit --level high
 
-      - name: 🔍 Audit frontend dependencies
+      - name: Audit frontend dependencies
         run: yarn workspace lol-metrics-view audit --level high
 
   unit-tests:
-    name: Run Unit Tests
+    name: 🧪 Unit Tests ${{ github.event_name == 'push' && '[Merge]' || '[PR]' }}
     runs-on: ubuntu-latest
     needs: install-deps
     steps:
-      - name: 🛎️ Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: 🔧 Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: "24"
           cache: "yarn"
 
-      - name: 📦 Restore Yarn cache
+      - name: Restore Yarn cache
         uses: actions/cache@v3
         with:
           path: |
@@ -106,5 +106,5 @@ jobs:
             **/.yarn/cache
           key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
-      - name: 🧪 Run backend unit tests
+      - name: Run backend unit tests
         run: yarn workspace lol-metrics-back test
