--- a/services/lol-metrics-view/package.json
+++ b/services/lol-metrics-view/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "^19.2.3",
@@ -21,7 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "15.3.3",
     "@eslint/eslintrc": "^3"
   }
 }
